--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=FileManagement
 server.port=8080
+spring.profiles.active=prod
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/fileManagement
 spring.datasource.username=postgres
@@ -9,4 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 aws.s3.bucketName=cano-pp-dev-sainty
 
-
+aws.s3.accessKey=AKIATMJFOIPXLN6FZZNQ
+aws.s3.secretKey=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
+aws.s3.region=us-east-1
