--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,3 +14,8 @@ logging.level.org.springframework.security=DEBUG
 aws.s3.accessKey=AKIATMJFOIPXLN6FZZNQ
 aws.s3.secretKey=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
 aws.s3.region=us-east-1
+
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=100MB
