--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 aws.s3.bucketName=cano-pp-dev-sainty
 
-aws.s3.accessKey=AKIATMJFOIPXLN6FZZNQ
-aws.s3.secretKey=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
-aws.s3.region=us-east-1
+aws.s3.accessKey=${AWS_ACCESS_KEY}
+aws.s3.secretKey=${AWS_SECRET_KEY}
+aws.s3.region=${AWS_REGION}
